Fixed responsiveness layout issues

--- a/src/components/Buttons/index.module.scss
+++ b/src/components/Buttons/index.module.scss
@@ -3,6 +3,7 @@
   font-size: 0.85rem;
   border: none;
   height: 45px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
