--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+html,
+body,
+#__next {
+  height: 100%;
+}
+
 html {
   @media (max-width: 1080px) {
     font-size: 93.75%;
@@ -16,7 +22,7 @@ html {
 
 body {
   font-family: "Inter", Helvetica, sans-serif;
-  background-color: #fcfcfc;
+  background-color: #f8f8f8;
   color: #363636;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
